Fixed extra space at bottom and changed clock image color

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-image: radial-gradient(circle, rgb(223, 234, 238), rgb(176, 203, 212), rgb(173, 215, 230), rgb(146, 146, 231));
   background-repeat: no-repeat;
-  height: 100%;
+  height: 100vh;
 }
 
 a {
